WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142014
Fix build warning in WebKit2/UIProcess module
https://bugs.webkit.org/show_bug.cgi?id=142014
Summary
Fix build warning in WebKit2/UIProcess module
Shivakumar J M
Reported
2015-02-25 02:33:15 PST
Got below build warning on latest build, might have casued by issue:
https://bugs.webkit.org/show_bug.cgi?id=141975
../../Source/WebKit2/UIProcess/WebsiteData/WebsiteDataStore.cpp:103:26: warning: unused parameter ‘isNonPersistentStore’ [-Wunused-parameter] static ProcessAccessType computeWebProcessAccessTypeForDataFetch(WebsiteDataTypes dataTypes, bool isNonPersistentStore)
Attachments
Patch
(1.31 KB, patch)
2015-02-25 02:41 PST
,
Shivakumar J M
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Shivakumar J M
Comment 1
2015-02-25 02:41:30 PST
Created
attachment 247327
[details]
Patch Fix build warning by using UNUSED_PARAM macro, since work is in progress.
Shivakumar J M
Comment 2
2015-02-25 03:21:18 PST
These was fixed in
https://bugs.webkit.org/show_bug.cgi?id=141794
, but again got changed in
https://bugs.webkit.org/show_bug.cgi?id=141975
.
Csaba Osztrogonác
Comment 3
2015-02-25 07:03:30 PST
***
Bug 142009
has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 4
2015-02-25 09:43:58 PST
Comment on
attachment 247327
[details]
Patch Clearing flags on attachment: 247327 Committed
r180630
: <
http://trac.webkit.org/changeset/180630
>
WebKit Commit Bot
Comment 5
2015-02-25 09:44:02 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug