Fix build warning in WebKit2/UIProcess module. https://bugs.webkit.org/show_bug.cgi?id=142014

Reviewed by Anders Carlsson.

Fix build warning by using UNUSED_PARAM macro.

* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::computeWebProcessAccessTypeForDataFetch):


Canonical link: https://commits.webkit.org/160044@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180630 268f45cc-cd09-0410-ab3c-d52691b4dbfc